data/derived/fa15/progs/unify/prog1120.ml.out
Characters 17-25:
  let g1 () = build(11,0,1);;
                   ^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type (int * int -> int) * int
